fix cart spacing

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -4,6 +4,9 @@
   > header
     .secondary-header, .primary-header
       display: none
+      
+  > .main
+    padding-top: 0
 
 .cart-page-title
   font-size: 32px
@@ -12,12 +15,13 @@
     font-size: 24px
     
 .cart-holder
+  -webkit-overflow-scrolling: touch
   background-color: inherit
   height: auto
   left: 0
   max-height: 100vh
   overflow-y: auto
-  padding: 0 7vw 120px
+  padding: 0 7vw 64px
   position: fixed
   width: 100%
   z-index: 200
